<resources>
    <string name="app_name">FinTrack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="create_category">Create Category</string>
    <string name="category_name">Category name</string>
    <string name="category_icon">Category icon:</string>
    <string name="borda">Borda</string>
    <string name="icon_key">Icon Key</string>
    <string name="icon_energy">Icon Energy</string>
    <string name="icon_wi_fi">Icon Wi-fi</string>
    <string name="icon_gas_station">Icon Gas Station</string>
    <string name="icon_home">Icon Home</string>
    <string name="icon_water_drop">Icon Water Drop</string>
    <string name="icon_credit_card">Icon Credit Card</string>
    <string name="icon_car">Icon Car</string>
    <string name="icon_shopping_cart">Icon Shopping Cart</string>
    <string name="icon_graphic">Icon Graphic</string>
    <string name="icon_clothes">Icon Clothes</string>
    <string name="icon_game_control">Icon Game Control</string>
    <string name="category_color">Category color:</string>
    <string name="light_orange">Light Orange</string>
    <string name="water_green">Water Green</string>
    <string name="water_blue">Water Blue</string>
    <string name="blue">Blue</string>
    <string name="ocean_blue">Ocean Blue</string>
    <string name="violet">Violet</string>
    <string name="red">Red</string>
    <string name="black">Black</string>
    <string name="pink">Pink</string>
    <string name="grey">Grey</string>
    <string name="brown">Brown</string>
    <string name="medium_orange">Medium Orange</string>
    <string name="medium_yellow">Medium Yellow</string>
    <string name="light_yellow">Light Yellow</string>
    <string name="green">Green</string>
    <string name="white">White</string>
    <string name="save">Save</string>
    <string name="light_brown">light brown</string>
    <string name="medium_green">medium green</string>
    <string name="new_spent">New spent</string>
    <string name="spent_name">Name</string>
    <string name="spent_price">Price</string>
</resources>